# webvillages-backend

./: main.py  pyproject.toml  readme.md  run
webvillages/: __init__.py  auth.py
webvillages/templates/: base.html
